--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="education_background.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="education_background.html">Education  Background</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
-    <h1>Contact Us</h1>
+    <h1>Contact Me</h1>
 
 </body>
 </html>
