--- a/education_background.html
+++ b/education_background.html
@@ -11,13 +11,13 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="education_background.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="education_background.html">Education  Background</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
-    <h2>About Me</h2>
+    <h2>My Education Background</h2>
     <p>Welcome to my personal page! Here you can find information about my education background.</p>
     <h2>Education Background</h2>
     <p>I have a !</p>
