--- a/education_background.html
+++ b/education_background.html
@@ -18,13 +18,9 @@
     </nav>
 
     <h2>My Education Background</h2>
-    <p>Welcome to my personal page! Here you can find information about my education background.</p>
-    <h2>Education Background</h2>
-    <p>I have a !</p>
-    <ul>
-        <li>Bachelor of Science in Computer Science, XYZ University, 2020</li>
-        <li>Master of Science in Software Engineering, ABC University, 2022</li>
-        <li>PhD in Artificial Intelligence, DEF University, 2025 (expected)</li>
-
+    <p>Welcome to my personal page!</p>
+    <p>I am David Soita a student at zetech university.</p>
+    <p>I am an undergraduate student pursuing Bachelor of Science in Information Technology.
+        Further to this I am a beneficiary at PLP, Power Learn Project for a Software Engieering  scholarship.</p> 
 </body>
 </html>
