--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </nav>
 
     <h1>About me</h1>
+    <p>I am a kenyan youth intrested in Informaton Technology.</p>
+    <p>I  am passionate about bring technologoical solution using Technology. </p>
 
 </body>
 </html>
