--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,43 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
-<body>
+<body class="container mt-5">
 
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="education_background.html">Education  Background</a></li>
+            <li><a href="education_background.html">Education Background</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
-    <h1>Contact Me</h1>
+    <h1 class="text-center">Contact Me</h1>
+    <p class="text-center">For further queries, feel free to contact me via:</p>
+
+    <form action="process_form.php" method="POST" class="mt-3">
+        <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" id="name" name="name" class="form-control" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="phone" class="form-label">Phone Number</label>
+            <input type="tel" id="phone" name="phone" class="form-control" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" id="email" name="email" class="form-control" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="reset" class="btn btn-secondary">Reset</button>
+    </form>
 
 </body>
 </html>
