--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
             <label for="message" class="form-label">Message</label>
             <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
         </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="reset" class="btn btn-secondary">Reset</button>
+        
+        <button type="button" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-danger">Reset</button>
     </form>
 
 </body>
