--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,25 @@
             <label for="message" class="form-label">Message</label>
             <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
         </div>
-        
+
         <button type="button" class="btn btn-primary">Submit</button>
         <button type="button" class="btn btn-danger">Reset</button>
     </form>
-
+    <footer>
+        <table>
+            <tr>
+              <th> Name</th>
+              <th>Phone Number</th>
+              <th>Linkedin</th>
+              <th>Email Address</th>
+            </tr>
+            <tr>
+              <td>David Soita</td>
+              <td>+254748254793</td>
+              <td ><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
+             <td><a href="mailto:davysoita@gmail.com">Send email</a></p></td> 
+            </tr>
+          </table>
+    </footer>
 </body>
 </html>
