--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <h1>About me</h1>
     <p>I am a kenyan youth intrested in Informaton Technology.</p>
     <p>I  am passionate about bring technologoical solution using Technology. </p>
-
+    <footer>
+        <table>
+            <tr>
+              <th> Name</th>
+              <th>Phone Number</th>
+              <th>Linkedin</th>
+              <th>Email Address</th>
+            </tr>
+            <tr>
+              <td>David Soita</td>
+              <td>+254748254793</td>
+              <td ><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
+             <td><a href="mailto:davysoita@gmail.com">Send email</a></p></td> 
+            </tr>
+          </table>
+    </footer>
 </body>
 </html>
