--- a/contact.html
+++ b/contact.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
-<body class="container mt-5">
+<body>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="education_background.html">Education Background</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </nav>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="education_background.html">Education Background</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </nav>
 
-    <h1 class="text-center">Contact Me</h1>
-    <p class="text-center">For further queries, feel free to contact me via:</p>
+    <!-- Contact Form -->
+    <main class="container mt-5 mb-5">
+        <h1 class="text-center">Contact Me</h1>
+        <p class="text-center">For further queries, feel free to contact me via:</p>
 
-    <form action="process_form.php" method="POST" class="mt-3">
-        <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" id="name" name="name" class="form-control" required>
-        </div>
+        <form action="process_form.php" method="POST" class="mt-4">
+            <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" id="name" name="name" class="form-control" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="phone" class="form-label">Phone Number</label>
-            <input type="tel" id="phone" name="phone" class="form-control" required>
-        </div>
+            <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" id="phone" name="phone" class="form-control" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" name="email" class="form-control" required>
-        </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" id="email" name="email" class="form-control" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="message" class="form-label">Message</label>
-            <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
-        </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
+            </div>
 
-        <button type="button" class="btn btn-primary">Submit</button>
-        <button type="button" class="btn btn-danger">Reset</button>
-    </form>
-    <footer>
-        <table>
-            <tr>
-              <th> Name</th>
-              <th>Phone Number</th>
-              <th>Linkedin</th>
-              <th>Email Address</th>
-            </tr>
-            <tr>
-              <td>David Soita</td>
-              <td>+254748254793</td>
-              <td ><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
-             <td><a href="mailto:davysoita@gmail.com">Send email</a></p></td> 
-            </tr>
-          </table>
-    </footer>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" class="btn btn-danger">Reset</button>
+        </form>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Phone Number</th>
+                <th>LinkedIn</th>
+                <th>Email Address</th>
+            </tr>
+            <tr>
+                <td>David Soita</td>
+                <td>+254 748 254 793</td>
+                <td><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
+                <td><a href="mailto:davysoita@gmail.com">Send Email</a></td>
+            </tr>
+        </table>
+    </footer>
+
 </body>
 </html>
