--- a/education_background.html
+++ b/education_background.html
@@ -3,40 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Education Background</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="education_background.html">Education  Background</a></li>
+            <li><a href="education_background.html">Education Background</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
-    <h2>My Education Background</h2>
-    <p>Welcome to my personal page!</p>
-    <p>I am David Soita a student at zetech university.</p>
-    <p>I am an undergraduate student pursuing Bachelor of Science in Information Technology.
-        Further to this I am a beneficiary at PLP, Power Learn Project for a Software Engieering  scholarship.</p>
-        <footer>
-            <table>
-                <tr>
-                  <th> Name</th>
-                  <th>Phone Number</th>
-                  <th>Linkedin</th>
-                  <th>Email Address</th>
-                </tr>
-                <tr>
-                  <td>David Soita</td>
-                  <td>+254748254793</td>
-                  <td ><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
-                 <td><a href="mailto:davysoita@gmail.com">Send email</a></p></td> 
-                </tr>
-              </table>
-        </footer>
+    <!-- Main Content -->
+    <main class="container mt-5">
+        <h2>My Education Background</h2>
+        <p>Welcome to my personal page!</p>
+        <p>I am David Soita, a student at Zetech University.</p>
+        <p>I am an undergraduate pursuing a Bachelor of Science in Information Technology.
+           Additionally, I am a beneficiary of the Power Learn Project (PLP), where I am enrolled in a Software Engineering scholarship program.</p>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Phone Number</th>
+                <th>LinkedIn</th>
+                <th>Email Address</th>
+            </tr>
+            <tr>
+                <td>David Soita</td>
+                <td>+254 748 254 793</td>
+                <td><a href="https://www.linkedin.com/in/david-soita-54400627b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></td>
+                <td><a href="mailto:davysoita@gmail.com">Send Email</a></td>
+            </tr>
+        </table>
+    </footer>
+
 </body>
 </html>
